// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Location with a locationUrl renders as expected 1`] = `
<WithStyles(ForwardRef(Typography))
  component="p"
>
  <WithStyles(ForwardRef(Link))
    href="https://example.com"
    rel="noreferrer"
    target="_blank"
  >
    locationName
  </WithStyles(ForwardRef(Link))>
</WithStyles(ForwardRef(Typography))>
`;

exports[`Location with no locationUrl renders as expected 1`] = `
<WithStyles(ForwardRef(Typography))
  component="p"
>
  <WithStyles(ForwardRef(Link))
    rel="noreferrer"
    target="_blank"
  >
    locationName
  </WithStyles(ForwardRef(Link))>
</WithStyles(ForwardRef(Typography))>
`;
